Upgraded Sesame to rdf4j version 2.3.2.